[gd_scene load_steps=7 format=2]

[ext_resource path="res://Musician.gd" type="Script" id=1]
[ext_resource path="res://sprites/Instruments/guitar.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.937255, 0.329412, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.854902, 0.521569, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[node name="Musician" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 14, -1 )
texture = ExtResource( 2 )

[node name="Interference" type="ProgressBar" parent="."]
margin_left = -50.0
margin_top = 257.0
margin_right = 50.0
margin_bottom = 277.0
custom_colors/font_color = Color( 0.87451, 0.572549, 0.0509804, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Soothe" type="ProgressBar" parent="."]
margin_left = -51.0
margin_top = 326.0
margin_right = 49.0
margin_bottom = 346.0
custom_colors/font_color = Color( 0.87451, 0.572549, 0.0509804, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Irritation" type="ProgressBar" parent="."]
margin_left = -50.0
margin_top = 282.0
margin_right = 50.0
margin_bottom = 302.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -50.0
margin_top = 311.0
margin_right = 50.0
margin_bottom = 325.0
text = "Muso"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="SootheTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="InterferenceLabel" type="Label" parent="."]
margin_left = -29.0
margin_top = 258.0
margin_right = 29.0
margin_bottom = 278.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SootheLabel" type="Label" parent="."]
margin_left = -47.0
margin_top = 330.0
margin_right = -7.0
margin_bottom = 353.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="IntTimer" to="." method="_on_IntTimer_timeout"]
[connection signal="timeout" from="SootheTimer" to="." method="_on_SootheTimer_timeout"]
